--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
